# CropDeepGS

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
cropdeepgs/: __init__.py  cli.py  model.py
examples/: run_example.sh  simulate_data.py  simulated_genotypes.tsv  simulated_phenotypes.tsv
tests/: test_public_package.py
